# rp_flask_api

./: .gitignore  README.md  config.py  models.py  notes.py  people.db  people.py  pyproject.toml  setup_sqlite3.py  swagger.yml
db/: build_database.py  people.db  setup_sqlite3_old.py
templates/: home.html
